fix: remove z-index

--- a/src/app/[locale]/components/starting/TimerPage.module.css
+++ b/src/app/[locale]/components/starting/TimerPage.module.css
@@ -6,7 +6,6 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  z-index: -1;
 }
 
 .timer {
